GNOME Bugzilla – Bug 723909
segfault after form with password
Last modified: 2014-05-07 09:13:05 UTC
Sometimes when a "save password?" prompt would be presented, epiphany segfaults. Running bbb6d6a639aa1e41d97349232b5247174b809133; this is (I believe) a recent regression.
+ Trace 233145
*** Bug 724770 has been marked as a duplicate of this bug. ***
This still happens (this time I got a trace with webkit symbols installed).
+ Trace 233358
I can reproduce this easily by trying to login to https://www.openstreetmap.org/login?cookie_test=true&referer=%2F using OpenID. The assertion is: ERROR:ephy-web-view.c:684:form_auth_data_save_requested: assertion failed: (webkit_web_view_get_page_id (WEBKIT_WEB_VIEW (web_view)) == page_id)
Created attachment 274259 [details] [review] embed: Fix crash with some password forms 31bc1fe6 transformed a simple escape hatch of a comparison into an assertion. But that assertion keeps getting triggered, so it's clearly the wrong option for now.
FWIW, I'm using the single process model, not the default multi process option because of memory usage. Fred, do you use the default process model, or the single one to reproduce this bug?
Bastien, you are right, that assert only makes sense in multiprocess mode, but even in that case it won't be correct once we support other multi process models, or if we introduce the maximum number of processes.
Comment on attachment 274259 [details] [review] embed: Fix crash with some password forms Thanks
Attachment 274259 [details] pushed as 0c050be - embed: Fix crash with some password forms
(In reply to comment #5) Reading through the comments, I think I suffer from this bug too even if I have never actually tried to get a backtrace because it always happens when I am in a hurry and restarting the browser usually lets me log in. > FWIW, I'm using the single process model, not the default multi process option > because of memory usage. > > Fred, do you use the default process model, or the single one to reproduce this > bug? I have process-model set to one-secondary-process-per-web-view. I will test the patch and see if there is an improvement.