embed: Fix crash with some password forms

31bc1fe6 transformed a simple escape hatch of a comparison into an
assertion. But that assertion keeps getting triggered, so it's clearly
the wrong option for now.

https://bugzilla.gnome.org/show_bug.cgi?id=723909